fix: fixed the problem that scroll animation is too stuck

--- a/src/components/PageIndex/CloudSection/PlayerContent/index.module.scss
+++ b/src/components/PageIndex/CloudSection/PlayerContent/index.module.scss
@@ -12,7 +12,7 @@
   width: 715px;
   margin-top: -300px;
   height: 330px;
-  background-image: url('./images/left-hand.svg');
+  background-image: url('./images/left-hand.png');
   background-size: 100% 100%;
 }
 
@@ -25,7 +25,7 @@
   width: 705px;
   margin-top: -100px;
   height: 350px;
-  background-image: url('./images/right-hand.svg');
+  background-image: url('./images/right-hand.png');
   background-size: 100% 100%;
 }
 
